<resources>
    <string name="app_name">CameraApp</string>

    <string name="default_version_name">v0.0.0</string>

    <string name="permission_camera_denied">Sorry, camera permission denied</string>

    <string name="content_description_background_image">Background image</string>
    <string name="content_description_target_image">Target image</string>

    <string name="game_button">Play game</string>
    <string name="calibration_button_description">Calibration</string>
    <string name="nerd_button_description">Nerd view</string>

    <string name="calibration_dot_tl">Calibration top left</string>
    <string name="calibration_dot_tr">Calibration top right</string>
    <string name="calibration_dot_cc">Calibration center</string>
    <string name="calibration_dot_bl">Calibration bottom left</string>
    <string name="calibration_dot_br">Calibration bottom right</string>
    <string name="calibration_result">DONE</string>

    <string name="preview_image_button_start">Start preview</string>
    <string name="preview_image_button_stop">Stop preview</string>
    <string name="analyze_image_button_start">Analyze</string>
    <string name="analyze_image_button_stop">Stop</string>
    <string name="analyze_image_switch_camera">Switch camera</string>
    <string name="analyze_image_enable_pupil_button">Enable pupil detection</string>
    <string name="analyze_image_accuracy_slider">Accuracy threshold</string>

    <string name="game_question_default"> </string>
    <string name="game_a_answer_default">aaa</string>
    <string name="game_b_answer_default">bbb</string>
    <string name="game_c_answer_default">ccc</string>
    <string name="game_d_answer_default">ddd</string>
    <string name="game_answer_correct">Correct</string>
    <string name="game_answer_wrong">Wrong</string>
    <string name="game_download_waiting">Downloading…</string>

</resources>